devcor-app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devcor-app
  name: devcor-app
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: devcor-app
