devcor-db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devcor-db
  name: devcor-db-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: devcor-db
