devcor-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devcor-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /devcor-app
        pathType: Prefix
        backend:
          service:
            name: devcor-app-service
            port:
              number: 80
